# django-params-field

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml  typing_and_lint.yml
src/django_params_field/: __init__.py  exceptions.py  params_field.py  schema_validator.py  serializer.py
tests/django_app/django_app/: settings.py  urls.py
tests/django_app/params_field/: apps.py  models.py  tests.py
tests/django_app/params_field/migrations/: 0001_initial.py
