[project]
name = "django-params-field"
version = "0.0.1"
description = "Django extension for storing a lot of parameters in one field."
authors = [{ name = "skv0zsneg", email = "<klimentlamonov@yandex.ru>" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = ["django>=4.2.0"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
mypy = "^1.15.0"
pytest-cov = "^6.1.1"
pytest-xdist = "^3.7.0"
django-stubs = { extras = ["compatible-mypy"], version = "^5.2.0" }
ruff = "^0.11.12"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_app.settings"
pythonpath = ["src", "tests/django_app"]
python_files = ["tests.py", "test_*.py"]
addopts = [
    # pytest-cov
    "--cov=src/",
    "--cov=tests/",
    "--cov-report=html",
    "--cov-fail-under=100",
    # pytest-xdist
    "-n=auto",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
